--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USERNAME=devuser
 DB_PASSWORD=123ABcd.
-DB_DATABASE=crud_tarea
+DB_DATABASE=jennifer_guerrero_db
 
 SESSION_SECRET=h4kj3883847kshjd88487j4jhd8487812bsjns83nd9384
 JWT_TOKEN_EXPIRATION=4d
